bug#13078 - ndb      memleak when doing ordered index scan on index with column larger than 32 bytes      (recommit for merge to 5.0)